public class Main {
    public static void main(String[] args)
    {
        System.out.println("Forma Lansata");
        MainForm form = new MainForm();
        form.initialize();
    }
}